--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - id: tag
+      run: echo "RELEASE_NAME=$(date -u -d @$(git log -1 --format=%ct) +"%y%m%d")" >> "$GITHUB_OUTPUT"
     - uses: docker/setup-qemu-action@v2
     - uses: docker/setup-buildx-action@v2
     - uses: docker/login-action@v2
@@ -18,10 +20,19 @@ jobs:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    - uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - uses: docker/build-push-action@v4
       with:
         context: .
         platforms: linux/amd64,linux/arm64
         push: true
+        cache-to: type=gha,mode=max
+        cache-from: type=gha
         tags: |
+          ntnj/tunwg:latest
+          ntnj/tunwg:${{ steps.tag.outputs.RELEASE_NAME }}
           ghcr.io/ntnj/tunwg:latest
+          ghcr.io/ntnj/tunwg:${{ steps.tag.outputs.RELEASE_NAME }}
